--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
 // @import 'vars'; если используете scss-переменные - подключите сюда vars, но удалите root из _vars.scss
 
+@import "./components/wrapper";
+
 @import "./components/header";
