--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,5 @@
 // @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+@include font-face("Muller", "../fonts/MuseoSans/MuseoSans300", 300, normal);
+@include font-face("Muller", "../fonts/MuseoSans/MuseoSans400", 400, normal);
+@include font-face("Muller", "../fonts/MuseoSans/MuseoSans500", 500, normal);
+@include font-face("Muller", "../fonts/MuseoSans/MuseoSans700", 700, normal);
