--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,1 +1,8 @@
-//
+.header {
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0;
+    }
+}
