--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,9 @@
 // @import 'vars'; если используете scss-переменные - подключите сюда vars, но удалите root из _vars.scss
 
 @import "./components/wrapper";
+@import "./components/logo";
+@import "./components/nav";
+@import "./components/btn";
+@import "./components/contact";
 
 @import "./components/header";
