--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./components/btn";
 @import "./components/contact";
 @import "./components/slider-card";
+@import "./components/burger";
 
 @import "./components/header";
 @import "./components/intro";
