--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,28 +6,43 @@
 				<a href="/" class="logo"></a>
 			</div>
 
-			<div class="header__nav">
-				<nav class="nav">
-					<a href="/" class="nav__elem">Главная</a>
-					<a href="" class="nav__elem">О компании</a>
-					<a href="" class="nav__elem">Каталог</a>
-					<a href="" class="nav__elem">Сертификаты</a>
-					<a href="" class="nav__elem">Дилерам</a>
-					<a href="" class="nav__elem">Контакты</a>
-				</nav>
+			<div id="mobnav"  class="header__mobnav">
+
+				<a data-target="#mobnav" class="header__cross"></a>
+
+				<div class="header__nav">
+
+					<div class="header__logo_mobnav">
+						<a href="/" class="logo logo_white"></a>
+					</div>
+
+					<nav class="nav">
+						<a href="/" class="nav__elem">Главная</a>
+						<a href="" class="nav__elem">О компании</a>
+						<a href="" class="nav__elem">Каталог</a>
+						<a href="" class="nav__elem">Сертификаты</a>
+						<a href="" class="nav__elem">Дилерам</a>
+						<a href="" class="nav__elem">Контакты</a>
+					</nav>
+				</div>
+
+				<div class="header__contact">
+					<div class="contact">
+						<div class="contact__numbers">
+							<a href="tel:+78126550317" class="number">8 (812) 655-03-17</a>
+							<a href="tel:+79213720209" class="number">8 (921) 372-02-09</a>
+						</div>
+						<div class="contact__mail">
+							<a href="mailto:b.morozov@avap-montage.ru" class="mail">b.morozov@avap-montage.ru</a>
+						</div>
+						<a href="" class="contact__btn btn">ОТПРАВИТЬ ЗАПРОС</a>
+					</div>
+				</div>
+
 			</div>
 
-			<div class="header__contact">
-				<div class="contact">
-					<div class="contact__numbers">
-						<a href="tel:+78126550317" class="number">8 (812) 655-03-17</a>
-						<a href="tel:+79213720209" class="number">8 (921) 372-02-09</a>
-					</div>
-					<div class="contact__mail">
-						<a href="mailto:b.morozov@avap-montage.ru" class="mail">b.morozov@avap-montage.ru</a>
-					</div>
-					<a href="" class="contact__btn btn">ОТПРАВИТЬ ЗАПРОС</a>
-				</div>
+			<div class="header__burger">
+				<a data-target="#mobnav" class="burger"></a>
 			</div>
 
 		</div>
