--- a/src/scss/components/contact.scss
+++ b/src/scss/components/contact.scss
@@ -2,9 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    @media (max-width:949px) {
+        align-items: flex-start;
+    }
     &__btn {
         width: 136px;
         height: 26px;
+        @media (max-width:949px) {
+            display: none;
+        }
     }
 }
 .number {
@@ -16,6 +22,11 @@
     display: block;
     cursor: pointer;
     transition: 0.3s ease; 
+    @media (max-width:949px) {
+        color: white;
+        font-size: 13px;
+        line-height: 1.55;
+    }
     &:hover {
         opacity: 0.8;
     }
@@ -30,6 +41,10 @@
     margin: 5px 0;
     cursor: pointer;
     transition: 0.3s ease; 
+    @media (max-width:949px) {
+        color: white;
+        margin-top: 25px;
+    }
     &:hover {
         opacity: 0.8;
     }
