--- a/src/scss/components/slider-card.scss
+++ b/src/scss/components/slider-card.scss
@@ -7,6 +7,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @media (min-width:1100px) and (max-width:1619px) {
+        width: 30%;
+    }
+    @media (min-width:601px) and (max-width:1099px) {
+        width: 45%;
+        &:last-child {
+            margin: 0 auto;
+            margin-top: 40px;
+        }
+    }
     &__slider {
 
     }
