--- a/src/scss/components/wrapper.scss
+++ b/src/scss/components/wrapper.scss
@@ -5,8 +5,11 @@
         max-width: 600px;
         padding: 0 10px;
     }
-    @media (min-width:601px) and (max-width:1099px) {
+    @media (min-width:601px) and (max-width:899px) {
         max-width: 728px;
+    }
+    @media (min-width:900px) and (max-width:1099px) {
+        max-width: 890px;
     }
     @media (min-width:1100px) and (max-width:1619px) {
         // max-width: 992px;
