--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -1,5 +1,8 @@
 .intro {
     padding: 80px 0;
+    @media (max-width:599px) {
+        padding: 50px 0;
+    }
     &__title {
         color: #0a113c;
         font-size: 42px;
@@ -7,6 +10,9 @@
         line-height: 1.3;
         font-weight: 700;
         max-width: 800px;
+        @media (max-width:949px) {
+            font-size: 26px;
+        }
         span {
             color: rgb(0, 10, 255);
         }
@@ -16,5 +22,9 @@
         justify-content: space-between;
         flex-wrap: wrap;
         padding: 50px 0;
+        @media (max-width:599px) {
+            justify-content: center;
+            padding-bottom: 0;
+        }
     }
 }
