--- a/src/scss/components/slider-card.scss
+++ b/src/scss/components/slider-card.scss
@@ -7,6 +7,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @media (max-width:599px) {
+        width: 100%;
+        margin-top: 20px;
+    }
     @media (min-width:1100px) and (max-width:1619px) {
         width: 30%;
     }
