--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,9 @@
 @import "./components/contact";
 @import "./components/slider-card";
 @import "./components/burger";
+@import "./components/title";
+@import "./components/news-card";
 
 @import "./components/header";
 @import "./components/intro";
+@import "./components/news";
