--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,7 +1,32 @@
 <div class="benefits">
     <div class="wrapper">
         <div class="benefits__content">
-            
+
+            <div class="benefits__card">
+                <a class="benefits__img" style="background-image: url(img/benefits/1.svg);"></a>
+                <h3 class="benefits__title">Сделано в России РУ на медицинское изделие.</h3>
+            </div>
+
+            <div class="benefits__card">
+                <a class="benefits__img" style="background-image: url(img/benefits/2.svg);"></a>
+                <h3 class="benefits__title">Все приборы сертифицированы для работы в присутствии людей</h3>
+            </div>
+
+            <div class="benefits__card">
+                <a class="benefits__img" style="background-image: url(img/benefits/3.svg);"></a>
+                <h3 class="benefits__title">Соответствуют требованиям Роспотребнадзора и СанПин</h3>
+            </div>
+
+            <div class="benefits__card">
+                <a class="benefits__img" style="background-image: url(img/benefits/4.svg);"></a>
+                <h3 class="benefits__title">Уничтожает 99% бактерий, вирусов, грибков.</h3>
+            </div>
+
+            <div class="benefits__card">
+                <a class="benefits__img" style="background-image: url(img/benefits/5.svg);"></a>
+                <h3 class="benefits__title">Бесплатная доставка по России.</h3>
+            </div>
+
         </div>
     </div>
 </div>
