--- a/src/scss/components/benefits.scss
+++ b/src/scss/components/benefits.scss
@@ -1,3 +1,68 @@
 .benefits {
-    
+    width: 100%;
+    position: relative;
+    background-image: linear-gradient(to bottom, rgba(9,15,53,0.8), rgba(9,15,53,0.8));
+    padding: 30px 0;
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        background-image: url(../img/benefits/back.jpg);
+        background-position: center;
+        background-size: cover;
+    }
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        @media (min-width:600px) and (max-width:1220px) {
+            justify-content: space-around;
+        }
+        @media (max-width:600px) {
+            justify-content: center;
+        }
+    }
+    &__card {
+        border-radius: 6px;
+        background-color: #ffffff;
+        width: 224px;
+        height: 226px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        @media (min-width:600px) and (max-width:1220px) {
+            width: 30%;
+            margin-bottom: 20px;
+        }
+        @media (max-width:600px) {
+            width: 90%;
+            margin-bottom: 20px;
+        }
+    }
+    &__img {
+        display: block;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 50%;
+        background-color: #f5f7fa;
+        width: 100px;
+        height: 100px;
+        margin-bottom: 20px;
+    }
+    &__title {
+        text-align: center;
+        color: #0a113c;
+        font-size: 14px;
+        font-family: 'MuseoSans',Arial,sans-serif;
+        line-height: 1.2;
+        font-weight: 400;
+        max-width: 200px;
+    }
 }
