--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,8 @@
 @import "./components/news-card";
 
 @import "./components/header";
+
 @import "./components/intro";
 @import "./components/news";
 @import "./components/benefits";
+@import "./components/info-catalog";
