--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./components/burger";
 @import "./components/title";
 @import "./components/news-card";
+@import "./components/card";
 
 @import "./components/header";
 
@@ -18,3 +19,4 @@
 @import "./components/news";
 @import "./components/benefits";
 @import "./components/info-catalog";
+@import "./components/catalog";
