--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -5,6 +5,11 @@
             <!-- Models -->
             <div class="catalog__grid">
 
+                <div class="catalog__title title">
+                    <h2>Модели</h2>
+                    <span>Для малых помещений</span>
+                </div>
+
                 <div class="catalog__card">
                     <div class="card">
                         <a class="card__img" style="background-image: url(img/catalog/models/1.jpg);"></a>
@@ -25,7 +30,7 @@
 
                 <div class="catalog__card">
                     <div class="card">
-                        <a class="card__img" style="background-image: url(img/catalog/models/1.jpg);"></a>
+                        <a class="card__img" style="background-image: url(img/catalog/models/2.jpg);"></a>
                         <h3 class="card__title">МРБО-102-02Ф</h3>
                         <div class="card__info">
                             <p>Производительность - 40 м³/ч</p>
@@ -43,7 +48,7 @@
 
                 <div class="catalog__card">
                     <div class="card">
-                        <a class="card__img" style="background-image: url(img/catalog/models/1.jpg);"></a>
+                        <a class="card__img" style="background-image: url(img/catalog/models/3.jpg);"></a>
                         <h3 class="card__title">МРБО-103-02Ф</h3>
                         <div class="card__info">
                             <p>Производительность - 60 м³/ч</p>
