--- a/src/scss/components/title.scss
+++ b/src/scss/components/title.scss
@@ -1,5 +1,8 @@
 .title {
     margin: 0 auto 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     h2 {
         font-family: 'MuseoSans',sans-serif;
         font-size: 26px;
