--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -4,8 +4,11 @@
     overflow: hidden;
     background-color: white;
     width: 260px;
-    height: 453px;
+    height: 475px;
     padding: 10px;
+    @media (max-width:600px) {
+        width: 100%;
+    }
     &__img {
         display: block;
         width: 238px;
@@ -15,6 +18,9 @@
         background-repeat: no-repeat;
         border: 1px solid #F5F7FA;
         border-radius: 7px;
+        @media (max-width:600px) {
+            margin: 0 auto;
+        }
     }
     &__title {
         color: #0a113c;
@@ -53,6 +59,8 @@
         height: 35px;
         font-size: 13px;
         font-weight: 500;
-        
+        @media (max-width:600px) {
+            width: 45%;
+        }
     }
 }
