--- a/src/scss/components/catalog.scss
+++ b/src/scss/components/catalog.scss
@@ -3,7 +3,7 @@
 
     }
     &__grid {
-        margin: 0 -30px;
+        margin: 0 -20px;
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
@@ -13,6 +13,9 @@
         width: 100%;
     }
     &__card {
-        margin: 0 30px 10px;
+        margin: 0 20px 20px;
+        @media (max-width:600px) {
+            width: 100%;
+        }
     }
 }
