--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -65,7 +65,6 @@
                 </div>
 
             </div>
-
             <!-- end -->
 
             <!-- large Models -->
@@ -290,7 +289,6 @@
                 </div>
 
             </div>
-
             <!-- end -->
 
             <!-- big Models -->
@@ -581,7 +579,236 @@
                 </div>
 
             </div>
+            <!-- end -->
 
+            <!-- auto Models -->
+            <div class="catalog__grid">
+
+                <div class="catalog__title title">
+                    <h2>Автомобильные рециркуляторы</h2>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models4/1.jpg);"></a>
+                        <h3 class="card__title">АРБО - 101Ф</h3>
+                        <div class="card__info">
+                            <p>Производительность - 20 м³/ч</p>
+                            <p>С доп.фильтрующим блоком G3</p>
+                            <p>Исполнение: <span>мобильное</span></p>
+                        </div>
+                        <p class="card__price">17 700 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models4/2.jpg);"></a>
+                        <h3 class="card__title">ТРБО/2-02Ф (П)</h3>
+                        <div class="card__info">
+                            <p>Производительность - 40 м³/ч</p>
+                            <p>С доп.фильтрующим блоком G3</p>
+                            <p>Исполнение: <span>напольное</span></p>
+                        </div>
+                        <p class="card__price">27 500 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models4/3.jpg);"></a>
+                        <h3 class="card__title">ТРБО/2-02Ф (С)</h3>
+                        <div class="card__info">
+                            <p>Производительность - 40 м³/ч</p>
+                            <p>С доп.фильтрующим блоком G3</p>
+                            <p>Исполнение: <span>настенное</span></p>
+                        </div>
+                        <p class="card__price">26 800 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models4/4.jpg);"></a>
+                        <h3 class="card__title">ТРБО/3-02Ф (П)</h3>
+                        <div class="card__info">
+                            <p>Производительность - 60 м³/ч</p>
+                            <p>С доп.фильтрующим блоком G3</p>
+                            <p>Исполнение: <span>напольное</span></p>
+                        </div>
+                        <p class="card__price">28 700 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models4/5.jpg);"></a>
+                        <h3 class="card__title">ТРБО/3-02Ф (С)</h3>
+                        <div class="card__info">
+                            <p>Производительность - 60 м³/ч</p>
+                            <p>С доп.фильтрующим блоком G3</p>
+                            <p>Исполнение: <span>настенное</span></p>
+                        </div>
+                        <p class="card__price">27 100 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end -->
+
+            <!-- acses Models -->
+            <div class="catalog__grid">
+
+                <div class="catalog__title title">
+                    <h2>Аксессуары</h2>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/1.jpg);"></a>
+                        <h3 class="card__title">Облучатель открытого типа МБО - 02</h3>
+                        <div class="card__info">
+                            <p>Производительность - 60 м³/ч</p>
+                            <p>Для помещений от 0.022 м²</p>
+                            <p>Исполнение: <span>открытое</span></p>
+                            <p>Облучатель открытого типа</p>
+                        </div>
+                        <p class="card__price">10 000 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/2.jpg);"></a>
+                        <h3 class="card__title">Стойка - платформа</h3>
+                        <div class="card__info">
+                            <p>Стойка - платформа для</p>
+                            <p>бактерицидного рециркулятора</p>
+                            <p>Айроклин</p>
+                        </div>
+                        <p class="card__price">2 600 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/3.jpg);"></a>
+                        <h3 class="card__title">Блок управления ТВТ</h3>
+                        <div class="card__info">
+                            <p>Блок управления бактерицидным рециркулятором с таймером и индикаторами</p>
+                        </div>
+                        <p class="card__price">1 500 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/4.jpg);"></a>
+                        <h3 class="card__title">Блок управления i-ТВТ</h3>
+                        <div class="card__info">
+                            <p>Управление работой бактерицидного рециркулятора через мобильное приложение на телефоне</p>
+                        </div>
+                        <p class="card__price">2 000 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/5.jpg);"></a>
+                        <h3 class="card__title">Блок ДУ</h3>
+                        <div class="card__info">
+                            <p>Дистанционное включение и выключение прибора</p>
+                        </div>
+                        <p class="card__price">3 000 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/6.jpg);"></a>
+                        <h3 class="card__title">Фотокаталитический фильтр</h3>
+                        <div class="card__info">
+                            <p>Разлагает бактерии, вирусы, химические элементы и уничтожает неприятные запахи.</p>
+                        </div>
+                        <p class="card__price">4 000 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/6.jpg);"></a>
+                        <h3 class="card__title">Фотокаталитический фильтр</h3>
+                        <div class="card__info">
+                            <p>Разлагает бактерии, вирусы, химические элементы и уничтожает неприятные запахи.</p>
+                        </div>
+                        <p class="card__price">4 800 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="catalog__card">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog/models5/6.jpg);"></a>
+                        <h3 class="card__title">Фотокаталитический фильтр</h3>
+                        <div class="card__info">
+                            <p>Разлагает бактерии, вирусы, химические элементы и уничтожает неприятные запахи.</p>
+                        </div>
+                        <p class="card__price">5 300 ₽</p>
+                        <div class="card__btns">
+                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a class="card__btn btn">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             <!-- end -->
 
         </div>
