--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -3,7 +3,7 @@
         <div class="catalog__content">
 
             <!-- small Models -->
-            <div class="catalog__grid">
+            <div class="catalog__grid" id="smallpremises">
 
                 <div class="catalog__title title">
                     <h2>Модели</h2>
@@ -67,8 +67,8 @@
             </div>
             <!-- end -->
 
-            <!-- large Models -->
-            <div class="catalog__grid">
+            <!-- middle Models -->
+            <div class="catalog__grid" id="middlepremises">
 
                 <div class="catalog__title title">
                     <h2>Модели</h2>
@@ -292,7 +292,7 @@
             <!-- end -->
 
             <!-- big Models -->
-            <div class="catalog__grid">
+            <div class="catalog__grid" id="bigpremises">
 
                 <div class="catalog__title title">
                     <h2>Модели</h2>
@@ -582,7 +582,7 @@
             <!-- end -->
 
             <!-- auto Models -->
-            <div class="catalog__grid">
+            <div class="catalog__grid" id="autorec">
 
                 <div class="catalog__title title">
                     <h2>Автомобильные рециркуляторы</h2>
@@ -677,7 +677,7 @@
             <!-- end -->
 
             <!-- acses Models -->
-            <div class="catalog__grid">
+            <div class="catalog__grid" id="aces">
 
                 <div class="catalog__title title">
                     <h2>Аксессуары</h2>
