--- a/src/partials/info-catalog.html
+++ b/src/partials/info-catalog.html
@@ -25,11 +25,11 @@
             </div>
 
             <div class="info-catalog__nav">
-                <a class="info-catalog__nav-elem btn">Для малых помещений</a>
-                <a class="info-catalog__nav-elem btn">Для средних помещений</a>
-                <a class="info-catalog__nav-elem btn">Для больших помещений</a>
-                <a class="info-catalog__nav-elem btn">Автомобильные Рециркуляторы</a>
-                <a class="info-catalog__nav-elem btn">Аксессуары</a>
+                <a class="info-catalog__nav-elem btn" href="#smallpremises">Для малых помещений</a>
+                <a class="info-catalog__nav-elem btn" href="#middlepremises">Для средних помещений</a>
+                <a class="info-catalog__nav-elem btn" href="#bigpremises">Для больших помещений</a>
+                <a class="info-catalog__nav-elem btn" href="#autorec">Автомобильные Рециркуляторы</a>
+                <a class="info-catalog__nav-elem btn" href="#aces">Аксессуары</a>
             </div>
 
         </div>
