--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,3 +20,4 @@
 @import "./components/benefits";
 @import "./components/info-catalog";
 @import "./components/catalog";
+@import "./components/table-prod";
