--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,3 +21,4 @@
 @import "./components/info-catalog";
 @import "./components/catalog";
 @import "./components/table-prod";
+@import "./components/not-find";
