--- a/src/scss/components/table-prod.scss
+++ b/src/scss/components/table-prod.scss
@@ -6,6 +6,9 @@
     &__content {
         padding: 20px 0;
         overflow-x: scroll;
+        &::-webkit-scrollbar { 
+            display: none; 
+        }
     }
     th {
         border: 0 solid #ccc;
