--- a/src/scss/components/catalog.scss
+++ b/src/scss/components/catalog.scss
@@ -1,13 +1,12 @@
 .catalog {
     &__content {
-
     }
     &__grid {
         margin: 0 -20px;
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
-        padding-top: 60px;
+        padding: 60px 0;
     }
     &__title {
         width: 100%;
