--- a/src/scss/components/info-catalog.scss
+++ b/src/scss/components/info-catalog.scss
@@ -24,6 +24,7 @@
         font-family: 'MuseoSans',Arial,sans-serif;
         line-height: 1.2;
         font-weight: 700;
+        max-width: 500px;
         @media (max-width:899px) {
             font-size: 18px;
         }
