--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,3 +22,4 @@
 @import "./components/catalog";
 @import "./components/table-prod";
 @import "./components/not-find";
+@import "./components/dilivery";
