--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,3 +23,6 @@
 @import "./components/table-prod";
 @import "./components/not-find";
 @import "./components/dilivery";
+@import "./components/clients";
+@import "./components/reviews";
+@import "./components/rospotreb";
