--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,3 +26,4 @@
 @import "./components/clients";
 @import "./components/reviews";
 @import "./components/rospotreb";
+@import "./components/certificates";
