--- a/src/scss/components/title.scss
+++ b/src/scss/components/title.scss
@@ -8,7 +8,7 @@
         font-size: 26px;
         font-weight: 700;
         line-height: 1.23;
-        color: black;
+        color: #0a113c;
         text-align: center;
     }
     span {
