--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,3 +27,5 @@
 @import "./components/reviews";
 @import "./components/rospotreb";
 @import "./components/certificates";
+@import "./components/how-working";
+@import "./components/backcall";
