--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,42 @@
 <footer class="footer">
-  <div class="container"></div>
+	<div class="wrapper">
+		<div class="footer__content">
+
+			<div class="footer__request">
+				<a href="/" class="logo logo_white"></a>
+				<p>ООО "АВАП-монтаж»</p>
+				<p>ИНН 4725480513</p>
+				<p>ОГРН 1114725001291</p>
+			</div>
+
+			<div class="footer__navs">
+				<div class="footer__nav">
+					<a href="" class="footer__nav-elem">Главная</a>
+					<a href="" class="footer__nav-elem">Бактерицидные рециркуляторы</a>
+					<a href="" class="footer__nav-elem">Бактерицидные секции для каналов вентиляции</a>
+					<a href="" class="footer__nav-elem">Бактерицидные секции-насадки для сплит-систем кондиционирования</a>
+				</div>
+	
+				<div class="footer__nav">
+					<a href="" class="footer__nav-elem">Свидетельства и Сертификаты</a>
+					<a href="" class="footer__nav-elem">Доставка и оплата</a>
+					<a href="" class="footer__nav-elem">Контакты</a>
+					<a href="" class="footer__nav-elem">О компании</a>
+				</div>
+			</div>
+
+
+			<div class="footer__contacts">
+				<div class="footer__numbers">
+					<a href="tel:+78126550317" class="number number_white">8 (812) 655-03-17</a>
+					<a href="tel:+79213720209" class="number number_white">8 (921) 372-02-09</a>
+				</div>
+				<div class="footer__mails">
+					<a href="mailto:b.morozov@avap-montage.ru" class="mail mail_white">b.morozov@avap-montage.ru</a>
+					<a href="" class="footer__btn btn">Отправить запрос</a>
+				</div>
+			</div>
+
+		</div>
+	</div>
 </footer>
