--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,3 +29,6 @@
 @import "./components/certificates";
 @import "./components/how-working";
 @import "./components/backcall";
+
+
+@import "./components/footer";
