--- a/src/scss/components/news-card.scss
+++ b/src/scss/components/news-card.scss
@@ -6,6 +6,7 @@
     height: 463px;
     background-color: white;
     position: relative;
+    cursor: pointer;
     @media (max-width:599px) {
         width: 100%;
         margin-top: 20px;
