--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -5,19 +5,19 @@
         </div>
         <div class="news__content">
 
-            <div class="news__elem news-card">
+            <div data-fancybox="news1" data-src="#news1" class="news__elem news-card">
                 <a class="news-card__img" style="background-image: url(img/news/1.jpg);"></a>
                 <h3 class="news-card__title">Наши приборы на выставке Новая нормальность г. Москва</h3>
                 <span class="news-card__date">26.05.2021</span>
             </div>
 
-            <div class="news__elem news-card">
+            <div data-fancybox="news2" data-src="#news2" class="news__elem news-card">
                 <a class="news-card__img" style="background-image: url(img/news/2.jpg);"></a>
                 <h3 class="news-card__title">Обеззараживатели Айроклин на ПМЭФ Экспо-Форум в Санкт-Петербурге</h3>
                 <span class="news-card__date">26.05.2021</span>
             </div>
 
-            <div class="news__elem news-card">
+            <div data-fancybox="news3" data-src="#news3" class="news__elem news-card">
                 <a class="news-card__img" style="background-image: url(img/news/3.jpg);"></a>
                 <h3 class="news-card__title">Гос. контракт на монтаж бактерицидных секций в каналы системы вентиляции Центра Гигиены и Эпидемиологии Роспотребнадзора г.Ханты-Мансийск</h3>
                 <span class="news-card__date">26.05.2021</span>
