--- a/src/partials/certificates.html
+++ b/src/partials/certificates.html
@@ -1,4 +1,5 @@
 <div class="certificates">
+    <a name="certificates"></a>
     <div class="wrapper">
         <div class="clients__title title title_left">
             <h2>Сертификаты и свидетельства</h2>
