--- a/src/partials/dilivery.html
+++ b/src/partials/dilivery.html
@@ -1,4 +1,5 @@
 <div class="dilivery">
+    <a name="dilivery"></a>
     <div class="wrapper">
         <div class="dilivery__content">
             <h3 class="dilivery__text">Бесплатная доставка по всей России до адреса получателя</h3>
