--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,17 +11,17 @@
 
 			<div class="footer__navs">
 				<div class="footer__nav">
-					<a href="" class="footer__nav-elem">Главная</a>
-					<a href="" class="footer__nav-elem">Бактерицидные рециркуляторы</a>
-					<a href="" class="footer__nav-elem">Бактерицидные секции для каналов вентиляции</a>
-					<a href="" class="footer__nav-elem">Бактерицидные секции-насадки для сплит-систем кондиционирования</a>
+					<a href="/" class="footer__nav-elem">Главная</a>
+					<a href="#info-catalog" class="footer__nav-elem">Бактерицидные рециркуляторы</a>
+					<a href="#info-catalog2" class="footer__nav-elem">Бактерицидные секции для каналов вентиляции</a>
+					<a href="#info-catalog3" class="footer__nav-elem">Бактерицидные секции-насадки для сплит-систем кондиционирования</a>
 				</div>
 	
 				<div class="footer__nav">
-					<a href="" class="footer__nav-elem">Свидетельства и Сертификаты</a>
-					<a href="" class="footer__nav-elem">Доставка и оплата</a>
-					<a href="" class="footer__nav-elem">Контакты</a>
-					<a href="" class="footer__nav-elem">О компании</a>
+					<a href="#certificates" class="footer__nav-elem">Свидетельства и Сертификаты</a>
+					<a href="#dilivery" class="footer__nav-elem">Доставка и оплата</a>
+					<a href="#backcall" class="footer__nav-elem">Контакты</a>
+					<a href="/about.html" class="footer__nav-elem">О компании</a>
 				</div>
 			</div>
 
