--- a/src/partials/info-catalog2.html
+++ b/src/partials/info-catalog2.html
@@ -1,4 +1,5 @@
 <div class="info-catalog">
+    <a name="info-catalog2"></a>
     <div class="wrapper">
         <div class="info-catalog__content">
 
