--- a/src/partials/intro.html
+++ b/src/partials/intro.html
@@ -13,7 +13,7 @@
                         <a class="slider-card__slide" style="background-image: url(img/intro/slider/1/5.jpg);"></a>
                     </div>
                     <h3 class="slider-card__title">Бактерицидные рециркуляторы воздуха Айроклин</h3>
-                    <a class="slider-card__btn btn">Перейти в каталог</a>
+                    <a href="#info-catalog" class="slider-card__btn btn">Перейти в каталог</a>
                 </div>
 
                 <div class="slider-card">
@@ -26,7 +26,7 @@
                         <a class="slider-card__slide" style="background-image: url(img/intro/slider/2/6.jpg);"></a>
                     </div>
                     <h3 class="slider-card__title">Бактерицидные секции для каналов центральной системы вентиляции</h3>
-                    <a class="slider-card__btn btn">Перейти в каталог</a>
+                    <a href="#info-catalog2" class="slider-card__btn btn">Перейти в каталог</a>
                 </div>
 
                 <div class="slider-card">
@@ -37,7 +37,7 @@
                         <a class="slider-card__slide" style="background-image: url(img/intro/slider/3/4.jpg);"></a>
                     </div>
                     <h3 class="slider-card__title">Бактерицидные секции- насадки для сплит-систем кондиционирования</h3>
-                    <a class="slider-card__btn btn">Перейти в каталог</a>
+                    <a href="#info-catalog3" class="slider-card__btn btn">Перейти в каталог</a>
                 </div>
 
             </div>
