--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -22,7 +22,7 @@
                         </div>
                         <p class="card__price">13 290 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-1-item-1" data-src="#catalog-1-item-1" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
