--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,7 @@
 @import "./components/footer";
 
 @import "./components/news-popup";
+@import "./components/popup-catalog";
 
 // about
 @import "./components/about-content";
