--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -40,7 +40,7 @@
                         </div>
                         <p class="card__price">17 730 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-1-item-2" data-src="#catalog-1-item-2" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         </div>
                         <p class="card__price">19 270 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-1-item-3" data-src="#catalog-1-item-3" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
