--- a/src/partials/popup-catalog1.html
+++ b/src/partials/popup-catalog1.html
@@ -1,3 +1,4 @@
+<!-- catalog 1 -->
 <div id="catalog-1-item-1" class="popup-catalog">
     <div class="popup-catalog__content">
 
@@ -69,3 +70,117 @@
 
     </div>
 </div>
+
+<div id="catalog-1-item-2" class="popup-catalog">
+    <div class="popup-catalog__content">
+
+        <div class="popup-catalog__slider">
+
+            <div class="slider-popup-catalog">
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/1.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/2.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/3.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/4.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/5.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/6.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/7.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/8.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/9.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/10.jpeg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/2/11.jpeg);"></a>
+            </div>
+
+            <div class="slider-nav">
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/1.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/2.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/3.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/4.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/5.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/6.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/7.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/8.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/9.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/10.jpeg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/2/11.jpeg);"></a>
+            </div>
+
+        </div>
+
+        <div class="popup-catalog__info">
+            <h2 class="popup-catalog__title">МРБО-102-02Ф</h2>
+            <p class="popup-catalog__price">17 730 ₽</p>
+            <a class="popup-catalog__btn btn btn_blue">Заказать</a>
+            <span class="popup-catalog__title-list">Технические характеристики:</span>
+            <ul class="popup-catalog__list">
+                <li>Производительность рециркулятора не менее 40 куб.м /час</li>
+                <li>Площадь помещения 7-26 м²</li>
+                <li>Оборудование дезинфицирует воздух от всех видов патогенных организмов, бактерий и вирусов</li>
+                <li>Источником излучения являются ультрафиолетовые бактерицидные безозоновые лампы</li>
+                <li>Исполнение: <strong>мобильное</strong></li>
+                <li>Питание: 220В / 50Гц</li>
+                <li>Электробезопасность: 1</li>
+                <li>Срок службы лампы: 9000 час</li>
+                <li>Мощность лампы: 11 Вт</li>
+                <li>Количество ламп: 2 шт.</li>
+                <li>Потребляемая мощность: 30 Вт</li>
+                <li>Сменный фильтр класса очистки G3: 12 шт.</li>
+                <li>Категория помещений: II, III, IV, V</li>
+                <li>Уровень звукового давления: 28 дБА</li>
+                <li>Температурный режим эксплуатации: -20°С ~ +40 °С</li>
+                <li>Материал корпуса: металл с порошковой покраской</li>
+                <li>Цвет корпуса : белый</li>
+            </ul>
+        </div>
+
+    </div>
+</div>
+
+<div id="catalog-1-item-3" class="popup-catalog">
+    <div class="popup-catalog__content">
+
+        <div class="popup-catalog__slider">
+
+            <div class="slider-popup-catalog">
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/3/1.jpg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/3/2.jpg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog1/3/3.jpg);"></a>
+            </div>
+
+            <div class="slider-nav">
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/3/1.jpg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/3/2.jpg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog1/3/3.jpg);"></a>
+            </div>
+
+        </div>
+
+        <div class="popup-catalog__info">
+            <h2 class="popup-catalog__title">МРБО-103-02Ф</h2>
+            <p class="popup-catalog__price">19 270 ₽</p>
+            <a class="popup-catalog__btn btn btn_blue">Заказать</a>
+            <span class="popup-catalog__title-list">Технические характеристики:</span>
+            <ul class="popup-catalog__list">
+                <li>Производительность рециркулятора не менее 60 куб.м /час</li>
+                <li>Площадь помещения 10-40 м²</li>
+                <li>Оборудование дезинфицирует воздух от всех видов патогенных организмов, бактерий и вирусов</li>
+                <li>Источником излучения являются ультрафиолетовые бактерицидные безозоновые лампы</li>
+                <li>Исполнение: <strong>мобильное</strong></li>
+                <li>Питание: 220В / 50Гц</li>
+                <li>Электробезопасность: 1</li>
+                <li>Срок службы лампы: 9000 час</li>
+                <li>Мощность лампы: 11 Вт</li>
+                <li>Количество ламп: 2 шт.</li>
+                <li>Потребляемая мощность: 35 Вт</li>
+                <li>Сменный фильтр класса очистки G3: 12 шт.</li>
+                <li>Категория помещений: II, III, IV, V</li>
+                <li>Уровень звукового давления: 35 дБА</li>
+                <li>Температурный режим эксплуатации: -20°С ~ +40 °С</li>
+                <li>Материал корпуса: металл с порошковой покраской</li>
+                <li>Цвет корпуса : белый</li>
+            </ul>
+        </div>
+
+    </div>
+</div>
+
+<!-- catalog 1 end -->
