--- a/src/scss/components/popup-catalog.scss
+++ b/src/scss/components/popup-catalog.scss
@@ -1,38 +1,117 @@
+.fancybox__slide {
+    @media (max-width:600px) {
+        padding: 8px;
+    }
+}
 .popup-catalog {
+    height: 0;
+    overflow-y: hidden;
+    &.fancybox__content {
+        max-width: 100%;
+        height: initial;
+        overflow-y: auto;
+    }
+    .fancybox__content {
+        @media (max-width:600px) {
+            padding: 15px;
+        }
+    }
     &__content {
-
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        cursor: default;
+        @media (max-width:600px) {
+            flex-wrap: wrap;
+        }
     }
     &__slider {
-
+        width: 45%;
+        @media (max-width:600px) {
+            width: 100%;
+        }
     }
     &__info {
-
+        width: 45%;
+        @media (max-width:600px) {
+            width: 100%;
+            margin-top: 20px;
+        }
     }
     &__title {
-
+        color: #0a113c;
+        font-weight: 700;
+        font-family: 'MuseoSans',sans-serif;
+        font-size: 24px;
+        line-height: 1.35;
     }
     &__price {
-
+        color: #0a113c;
+        font-weight: 700;
+        font-family: 'MuseoSans',sans-serif;
+        font-size: 20px;
+        line-height: 1.35;
+        margin: 15px 0;
     }
     &__btn {
-
+        width: 122px;
+        height: 45px;
+        font-size: 14px;
     }
     &__title-list {
-
+        font-weight: 700;
+        font-family: 'MuseoSans',sans-serif;
+        color: rgb(10, 17, 60);
+        line-height: 1.2;
+        font-size: 14px;
+        display: block;
+        margin-top: 20px;
+        margin-bottom: 5px;
     }
     &__list {
-        ul {
-            
+        list-style: inside;
+        li {
+            color: rgb(10, 17, 60);
+            line-height: 1.2;
+            font-weight: 300;
+            font-family: 'MuseoSans',sans-serif;
+            font-size: 14px;
+            strong {
+                font-weight: 700; 
+            }
         }
     }
 }
 .slider-popup-catalog {
+    width: 100%;
     &__slide {
-
+        width: 500px;
+        height: 500px;
+        display: block;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 0 auto;
+        @media (max-width:1099px) {
+            width: 400px;
+            height: 400px;
+        }
     }
 }
 .slider-nav {
+    width: 100%;
+    margin-top: 20px;
     &__slide {
-            
+        width: 100px;
+        height: 100px;  
+        display: block; 
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        cursor: pointer;
+        @media (max-width:1099px) {
+            width: 50px;
+            height: 50px;
+        }
     }
 }
