--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -88,7 +88,7 @@
                         </div>
                         <p class="card__price">16 590 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-1" data-src="#catalog-2-item-1" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                         </div>
                         <p class="card__price">18 680 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-2" data-src="#catalog-2-item-2" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         </div>
                         <p class="card__price">20 180 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-3" data-src="#catalog-2-item-3" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         </div>
                         <p class="card__price">16 590 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-4" data-src="#catalog-2-item-4" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                         </div>
                         <p class="card__price">18 680 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-5" data-src="#catalog-2-item-5" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                         </div>
                         <p class="card__price">20 180 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-6" data-src="#catalog-2-item-6" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                         </div>
                         <p class="card__price">22 430 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-7" data-src="#catalog-2-item-7" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                         </div>
                         <p class="card__price">23 550 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-8" data-src="#catalog-2-item-8" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                         </div>
                         <p class="card__price">21 780 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-9" data-src="#catalog-2-item-9" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -263,7 +263,7 @@
                         </div>
                         <p class="card__price">23 550 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-10" data-src="#catalog-2-item-10" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                         </div>
                         <p class="card__price">21 780 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-2-item-11" data-src="#catalog-2-item-11" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
