--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -310,7 +310,7 @@
                         </div>
                         <p class="card__price">28 510 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-1" data-src="#catalog-3-item-1" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                         </div>
                         <p class="card__price">30 780 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-2" data-src="#catalog-3-item-2" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -347,7 +347,7 @@
                         </div>
                         <p class="card__price">27 890 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-3" data-src="#catalog-3-item-3" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -364,7 +364,7 @@
                         </div>
                         <p class="card__price">28 510 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-4" data-src="#catalog-3-item-4" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -382,7 +382,7 @@
                         </div>
                         <p class="card__price">30 780 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-5" data-src="#catalog-3-item-5" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -402,7 +402,7 @@
                         </div>
                         <p class="card__price">30 150 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-6" data-src="#catalog-3-item-6" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -421,7 +421,7 @@
                         </div>
                         <p class="card__price">27 890 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-7" data-src="#catalog-3-item-7" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -441,7 +441,7 @@
                         </div>
                         <p class="card__price">30 150 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-8" data-src="#catalog-3-item-8" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -460,7 +460,7 @@
                         </div>
                         <p class="card__price">57 900 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-9" data-src="#catalog-3-item-9" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -479,7 +479,7 @@
                         </div>
                         <p class="card__price">57 900 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-10" data-src="#catalog-3-item-10" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -496,7 +496,7 @@
                         </div>
                         <p class="card__price">58 860 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-11" data-src="#catalog-3-item-11" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -515,7 +515,7 @@
                         </div>
                         <p class="card__price">79 880 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-12" data-src="#catalog-3-item-12" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -534,7 +534,7 @@
                         </div>
                         <p class="card__price">79 880 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-13" data-src="#catalog-3-item-13" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -553,7 +553,7 @@
                         </div>
                         <p class="card__price">129 400 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-14" data-src="#catalog-3-item-14" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -572,7 +572,7 @@
                         </div>
                         <p class="card__price">129 400 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-3-item-15" data-src="#catalog-3-item-15" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
