--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -599,7 +599,7 @@
                         </div>
                         <p class="card__price">17 700 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-4-item-1" data-src="#catalog-4-item-1" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -616,7 +616,7 @@
                         </div>
                         <p class="card__price">27 500 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-4-item-2" data-src="#catalog-4-item-2" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -633,7 +633,7 @@
                         </div>
                         <p class="card__price">26 800 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-4-item-3" data-src="#catalog-4-item-3" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -650,7 +650,7 @@
                         </div>
                         <p class="card__price">28 700 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-4-item-4" data-src="#catalog-4-item-4" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -667,7 +667,7 @@
                         </div>
                         <p class="card__price">27 100 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-4-item-5" data-src="#catalog-4-item-5" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
