--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -695,7 +695,7 @@
                         </div>
                         <p class="card__price">10 000 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-1" data-src="#catalog-5-item-1" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -712,7 +712,7 @@
                         </div>
                         <p class="card__price">2 600 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-2" data-src="#catalog-5-item-2" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -727,7 +727,7 @@
                         </div>
                         <p class="card__price">1 500 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-3" data-src="#catalog-5-item-3" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -742,7 +742,7 @@
                         </div>
                         <p class="card__price">2 000 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-4" data-src="#catalog-5-item-4" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -757,7 +757,7 @@
                         </div>
                         <p class="card__price">3 000 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-5" data-src="#catalog-5-item-5" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -772,7 +772,7 @@
                         </div>
                         <p class="card__price">4 000 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-6" data-src="#catalog-5-item-6" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -787,7 +787,7 @@
                         </div>
                         <p class="card__price">4 800 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-7" data-src="#catalog-5-item-7" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
@@ -802,7 +802,7 @@
                         </div>
                         <p class="card__price">5 300 ₽</p>
                         <div class="card__btns">
-                            <a class="card__btn btn btn_blue">Подробнее</a>
+                            <a data-fancybox="catalog-5-item-8" data-src="#catalog-5-item-8" class="card__btn btn btn_blue">Подробнее</a>
                             <a class="card__btn btn">Заказать</a>
                         </div>
                     </div>
